# cortex-m-quickstart

./: Cargo.toml  thumbv7m-unknown-eabi.json
.cargo/: config
src/: main.rs
